Closed
Bug 1322983
Opened 8 years ago
Closed 8 years ago
Unconditionally build the minidump-analyzer tool
Categories
(Toolkit :: Crash Reporting, defect)
Toolkit
Crash Reporting
Tracking
()
RESOLVED
FIXED
mozilla53
People
(Reporter: gsvelto, Assigned: gsvelto)
References
Details
Attachments
(1 file)
2.68 KB,
patch
|
ted
:
review+
jcristau
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
+++ This bug was initially created as a clone of Bug #1317968 +++
The minidump-analyzer tool is currently build only on nightly but it's unconditionally included in the distribution. Rather than putting conditionals everywhere for its inclusion let's build it unconditionally but only enable it's functionality on nightly and aurora.
Assignee | ||
Comment 1•8 years ago
|
||
This should fix the issue, the try run is here:
https://treeherder.mozilla.org/#/jobs?repo=try&revision=585b394a3a4ac2ab2bd77b2cf3f6a976376576a5
Assignee: nobody → gsvelto
Status: NEW → ASSIGNED
Assignee | ||
Comment 2•8 years ago
|
||
Comment on attachment 8817994 [details] [diff] [review]
[PATCH] Unconditionally build the minidump-analyzer but run it only on nightly/aurora
This builds the minidump-analyzer unconditionally but then only runs it on nightly/aurora. Hopefully we'll turn it on soon enough on the other channels too.
Attachment #8817994 -
Flags: review?(ted)
Updated•8 years ago
|
Attachment #8817994 -
Flags: review?(ted) → review+
Assignee | ||
Comment 3•8 years ago
|
||
Thanks for the quick review Ted! Try looks green, pushing...
Pushed by gsvelto@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/f49e998f4b6a
Unconditionally build the minidump-analyzer but run it only on nightly/aurora r=ted
Comment 5•8 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
status-firefox53:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
Assignee | ||
Comment 6•8 years ago
|
||
Comment on attachment 8817994 [details] [diff] [review]
[PATCH] Unconditionally build the minidump-analyzer but run it only on nightly/aurora
Approval Request Comment
[Feature/Bug causing the regression]: Required to uplift bug 1317968
[User impact if declined]: We won't be able to automatically gather detailed data on user crashes
[Is this code covered by automated tests?]: No
[Has the fix been verified in Nightly?]: Yes
[Needs manual test from QE? If yes, steps to reproduce]: No
[List of other uplifts needed for the feature/fix]: Bug 1317968 which has already been approved for uplift
[Is the change risky?]: No
[Why is the change risky/not risky?]: This is a very simple change enabled only on nightly and aurora
[String changes made/needed]: None
Attachment #8817994 -
Flags: approval-mozilla-aurora?
Comment 7•8 years ago
|
||
Comment on attachment 8817994 [details] [diff] [review]
[PATCH] Unconditionally build the minidump-analyzer but run it only on nightly/aurora
always build minidump-analyzer, aurora52+
Attachment #8817994 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 8•8 years ago
|
||
bugherder uplift |
status-firefox52:
--- → fixed
Assignee | ||
Comment 9•8 years ago
|
||
(In reply to Ryan VanderMeulen [:RyanVM] from comment #8)
> https://hg.mozilla.org/releases/mozilla-aurora/rev/84c4cc76070f
Thanks for landing this Ryan; I've wasted most of Friday morning fighting with hg graft without much success :-|
You need to log in
before you can comment on or make changes to this bug.
Description
•