Bug 1322983 - Unconditionally build the minidump-analyzer but run it only on nightly/aurora r=ted