toolkit/crashreporter/client/crashreporter.cpp
@@ -513,6 +513,8 @@ bool CheckEndOfLifed(string version)
   return UIFileExists(reportPath);
 }
 
+#ifndef RELEASE_OR_BETA
+
 static string
 GetMinidumpAnalyzerPath()
 {
@@ -523,6 +525,8 @@ GetMinidumpAnalyzerPath()
 
   return path;
 }
+
+#endif
 
 int main(int argc, char** argv)
 {
@@ -545,8 +549,11 @@ int main(int argc, char** argv)
     // no dump file specified, run the default UI
     UIShowDefaultUI();
   } else {
-    // start by running minidump analyzer
+#ifndef RELEASE_OR_BETA
+    // start by running minidump analyzer, this is currently enabled only in
+    // nightly and aurora
     UIRunMinidumpAnalyzer(GetMinidumpAnalyzerPath(), gReporterDumpFile);
+#endif
 
     // go ahead with the crash reporter
     gExtraFile = GetAdditionalFilename(gReporterDumpFile, kExtraDataExtension);
